--- a/env.example
+++ b/env.example
@@ -2,29 +2,31 @@
 # Monitoring in a Box - Environment Variables
 # ===========================================
 # Copy this file to .env and customize the values for your environment
+# IMPORTANT: Change all default passwords and secrets before production use!
 
 # ===========================================
 # 🌐 Site Configuration
 # ===========================================
-SITE_NAME="Monitoring in a Box"
-SITE_URL="http://localhost:3000"
-SITE_DESCRIPTION="Modern monitoring solution for your DevOps infrastructure"
+SITE_NAME="DevOps Monitoring Dashboard"
+SITE_URL="http://localhost:4000"
+SITE_DESCRIPTION="Comprehensive DevOps monitoring solution"
 SITE_VERSION="1.0.0"
 
 # SEO Configuration
-SEO_TITLE="Monitoring in a Box - Modern Infrastructure Monitoring"
+SEO_TITLE="DevOps Monitoring Dashboard - Modern Infrastructure Monitoring"
 SEO_DESCRIPTION="Comprehensive DevOps monitoring solution with real-time metrics, centralized logging, and intelligent alerting"
 SEO_KEYWORDS="devops,monitoring,infrastructure,metrics,alerts,prometheus,grafana,loki"
-SEO_AUTHOR="Monitoring in a Box Team"
+SEO_AUTHOR="DevOps Monitoring Team"
 SEO_ROBOTS="index,follow"
-SEO_CANONICAL="http://localhost:3000"
+SEO_CANONICAL="http://localhost:4000"
 
 # ===========================================
 # 🔐 Authentication & Security
 # ===========================================
-# Required: Generate a secure secret key
-NEXTAUTH_SECRET="your-super-secret-key-change-this-in-production"
-NEXTAUTH_URL="http://localhost:3000"
+# Required: Generate a secure secret key - CHANGE IN PRODUCTION!
+# Generate with: openssl rand -base64 32
+NEXTAUTH_SECRET="change-this-super-secret-key-in-production-32-chars-min"
+NEXTAUTH_URL="http://localhost:4000"
 
 # Database Configuration
 # Development (SQLite)
@@ -38,7 +40,19 @@ SESSION_MAX_AGE="30d"
 SESSION_UPDATE_AGE="1d"
 
 # ===========================================
-# 📊 Monitoring Services
+# 📊 Monitoring Services - Security
+# ===========================================
+# Grafana Security - CHANGE DEFAULT PASSWORDS!
+GRAFANA_ADMIN_USER="admin"
+GRAFANA_ADMIN_PASSWORD="change-this-default-password"
+GRAFANA_SECRET_KEY="change-this-grafana-secret-key"
+
+# Alertmanager Security
+ALERTMANAGER_ADMIN_USER="admin"
+ALERTMANAGER_ADMIN_PASSWORD="change-this-alertmanager-password"
+
+# ===========================================
+# 📊 Monitoring Services - Configuration
 # ===========================================
 # Prometheus Configuration
 PROMETHEUS_URL="http://localhost:9090"
@@ -47,8 +61,6 @@ PROMETHEUS_SCRAPE_INTERVAL="15s"
 
 # Grafana Configuration
 GRAFANA_URL="http://localhost:3000"
-GRAFANA_USER="admin"
-GRAFANA_PASSWORD="admin"
 
 # Loki Configuration
 LOKI_URL="http://localhost:3100"
@@ -67,22 +79,32 @@ SMTP_SECURE="false"
 SMTP_USER="your-email@gmail.com"
 SMTP_PASS="your-app-password"
 EMAIL_FROM="alerts@yourcompany.com"
-EMAIL_TO="admin@yourcompany.com"
+EMAIL_TO="admin@yourcompany.com,team@yourcompany.com"
 
 # Slack Configuration
 SLACK_WEBHOOK_URL="https://hooks.slack.com/services/YOUR/SLACK/WEBHOOK"
 SLACK_CHANNEL="#alerts"
-SLACK_USERNAME="Monitoring Bot"
+SLACK_USERNAME="DevOps Monitor"
 SLACK_ICON_EMOJI=":bell:"
 
 # Microsoft Teams Configuration
 TEAMS_WEBHOOK_URL="https://outlook.office.com/webhook/YOUR-TEAMS-WEBHOOK"
-TEAMS_TITLE="Monitoring Alert"
+TEAMS_TITLE="DevOps Monitor Alert"
 
 # Discord Configuration
 DISCORD_WEBHOOK_URL="https://discord.com/api/webhooks/YOUR/DISCORD/WEBHOOK"
-DISCORD_USERNAME="Monitoring Bot"
-DISCORD_AVATAR_URL="https://example.com/bot-avatar.png"
+DISCORD_USERNAME="DevOps Monitor"
+DISCORD_AVATAR_URL=""
+
+# PagerDuty Configuration
+PAGERDUTY_ROUTING_KEY="your-pagerduty-routing-key"
+
+# OpsGenie Configuration
+OPSGENIE_API_KEY="your-opsgenie-api-key"
+
+# VictorOps Configuration
+VICTOROPS_API_KEY="your-victorops-api-key"
+VICTOROPS_ROUTING_KEY="your-victorops-routing-key"
 
 # ===========================================
 # 🎨 UI Configuration
@@ -149,6 +171,7 @@ PORT="3000"
 HOST="0.0.0.0"
 
 # Docker Configuration
+DOCKERHUB_USERNAME="yourusername"
 DOCKER_REGISTRY="your-registry.com"
 DOCKER_IMAGE_TAG="latest"
 
@@ -171,15 +194,32 @@ DEV_LOKI_URL="http://localhost:3100"
 DEV_ALERTMANAGER_URL="http://localhost:9093"
 
 # ===========================================
-# 📝 Notes
+# 🔒 Security Headers & CORS
 # ===========================================
-# 1. Change NEXTAUTH_SECRET to a secure random string in production
-# 2. Update database credentials for production use
-# 3. Configure notification webhooks for your services
-# 4. Set proper CORS origins for production deployment
-# 5. Enable SSL/TLS for production environments
-# 6. Configure proper backup strategies for your database
-# 7. Set up monitoring for the monitoring system itself
-# 8. Review and update all default passwords
-# 9. Configure proper logging levels for production
-# 10. Set up proper error tracking and alerting
+# CORS Configuration
+CORS_ORIGIN="http://localhost:4000"
+CORS_CREDENTIALS="true"
+
+# Security Headers
+ENABLE_SECURITY_HEADERS="true"
+ENABLE_HELMET="true"
+
+# ===========================================
+# 📝 Security Notes
+# ===========================================
+# IMPORTANT SECURITY REMINDERS:
+# 1. CHANGE NEXTAUTH_SECRET - Generate with: openssl rand -base64 32
+# 2. CHANGE GRAFANA_ADMIN_PASSWORD - Default is "admin"
+# 3. CHANGE ALERTMANAGER_ADMIN_PASSWORD - Set a strong password
+# 4. UPDATE all webhook URLs and notification credentials
+# 5. SET proper CORS origins for production deployment
+# 6. ENABLE SSL/TLS for production environments
+# 7. CONFIGURE proper backup strategies for your database
+# 8. SET up monitoring for the monitoring system itself
+# 9. REVIEW and update all default passwords
+# 10. CONFIGURE proper logging levels for production
+# 11. SET up proper error tracking and alerting
+# 12. USE environment variables instead of hardcoded secrets
+# 13. ENABLE firewall rules to restrict access
+# 14. IMPLEMENT rate limiting for API endpoints
+# 15. USE VPN or private networks for admin access
